--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,22 +1,24 @@
+body {
+    background-color: lightgray;
+}
+
 .mainList {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    width: fit-content;
 }
 
-.lable {
-    outline: black;
-    outline-style: auto;
+.itemRed {
+    background-color: rgba(241, 245, 0, 0.247);
 }
 
-.lableRed {
-    background-color: rgb(212, 27, 27);
-    color: white;
-    outline: black;
-    outline-style: auto;
+li:hover {
+    font-weight: bolder;
+    text-decoration: line-through 2px;
 }
 
-.parent {
+#parent {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
@@ -26,4 +28,14 @@
 
 .smol {
     height: 5px;
+}
+
+@keyframes fade {
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+
+@keyframes shrink {
+    0% {height: 24px;}
+    100% {height: 0px;}
 }
