--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,10 @@
 body {
     background-color: #d3d3d3;
     color: #000000;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: fit-content;
 }
 
 .mainList {
@@ -11,7 +15,7 @@ body {
 }
 
 .itemRed {
-    background-color: #f1f500;
+    background-color: #f1f50088;
 }
 
 li:hover {
@@ -22,9 +26,26 @@ li:hover {
 #parent {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
     grid-column-gap: 10px;
     grid-row-gap: 0px;
+}
+
+.title1 {
+    left: 1.7rem;
+    position: absolute;
+}
+
+#listNormal {
+    grid-column: 1 / span 1;
+}
+
+.title2 {
+    left: 18rem;
+    position: relative;
+}
+
+#listImportant {
+    grid-column: 2 / span 1;
 }
 
 .colorpicker {
